Fix: stable pom.xml and remove redundant test file